Added legacyInput method